methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:20: error: not found: value faireV
  faireV()
  ^