methods.picture.PictureMono2.scala.code

def faireMotif(){
  baisseBrosse()
  gauche()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  droite()
  avance()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
 
  for (i<-1 to 7){   
  avance(2)
  faireV()
  avance(2)
   gauche()
  }
}

override def run() {
  faireMotif()
}

 